# roxy-lang

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DESIGN.md  OPTIMIZATION.md  README.md  TODO.md  roxy-lang.natvis
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/lox/: binary_trees_small.lox  equality_small.lox  fib_small.lox  instantiation_small.lox  invocation_small.lox  method_call_small.lox  properties_small.lox  run_benchmarks.sh  trees_small.lox  zoo_small.lox
benchmarks/mandelbrot/: mandelbrot.c  mandelbrot.py  mandelbrot.roxy  run_benchmark.sh
benchmarks/nbody/: nbody.c  nbody.py  nbody.roxy  run_benchmark.sh
benchmarks/quicksort/: quicksort.c  quicksort.py  quicksort.roxy  run_benchmark.sh
benchmarks/struct_copy/: struct_copy.roxy
docs/: grammar.md  internals.md  libraries.md  lox-reimplementation.md  overview.md
docs/internals/: arrays.md  bytecode.md  c-backend.md  closures.md  constructors.md  coroutines.md  error-handling.md  exceptions.md  frontend.md  fuzzer.md  generics.md  globals.md  identifier-interning.md  inheritance.md  interop.md  lifecycle-traits.md  lifetime-audit-remaining.md  lifetimes.md  list.md  lsp-server.md  maps.md  memory.md  methods.md  modules.md  operator-overloading.md  optimization.md  profiling.md  recursive-types.md  ssa-ir.md  strings.md  structs.md  tagged-unions.md  traits.md  vm-optimization.md  vm.md
editors/jetbrains/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/vscode/: language-configuration.json  package.json
editors/zed/: .gitignore  Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
editors/zed/tree-sitter-roxy/: .gitignore  grammar.js  package.json
examples/: arithmetic.roxy  builtins.roxy  conditional.roxy  fibonacci.roxy  fibonacci_for.roxy  fibonacci_fun.roxy  fibonacci_fun_complex.roxy  function_call.roxy  hello.roxy  quicksort.roxy  showcase.roxy  showcase_short.roxy  string.roxy  struct.roxy  sudoku.roxy
examples/features/: arithmetic.roxy  fibonacci_fun_complex.roxy  string.roxy
examples/features/module/: math.roxy  test.roxy
examples/lox/: README.md  ast.roxy  interpreter.roxy  main.roxy  parser.roxy  resolver.roxy  scanner.roxy  test.roxy  tokens.roxy  value.roxy
examples/module/: fibonacci.roxy  math.roxy
examples/prototype/: calling_convention.roxy  struct.roxy
examples/test/: conditional.roxy  fibonacci_for.roxy  fibonacci_fun.roxy  function_call.roxy
examples/test/assignment/: global.roxy  undefined.roxy
examples/test/benchmark/: binary_trees.roxy  fib.roxy  instantiation.roxy  invocation.roxy  method_call.roxy  properties.roxy  trees.roxy  zoo.roxy  zoo_batch.roxy
examples/test/call/: bool.roxy  nil.roxy  num.roxy  object.roxy  string.roxy
examples/test/constructor/: arguments.roxy  default_arguments.roxy  early_return.roxy  extra_arguments.roxy  init_not_method.roxy  missing_arguments.roxy  return_in_nested_function.roxy  return_value.roxy
examples/test/field/: call_function_field.roxy  call_nonfunction_field.roxy  get_and_set_method.roxy  get_on_bool.roxy  get_on_class.roxy  get_on_function.roxy  get_on_nil.roxy  get_on_num.roxy  get_on_string.roxy  many.roxy  method.roxy  method_binds_this.roxy  on_instance.roxy  set_evaluation_order.roxy  set_on_bool.roxy  set_on_class.roxy  set_on_function.roxy  set_on_nil.roxy  set_on_num.roxy  set_on_string.roxy  undefined.roxy
examples/test/for/: class_in_body.roxy  closure_in_body.roxy  scope.roxy  (+6 more)
include/roxy/: anyvalue.hpp  ast_allocator.hpp  ast_printer.hpp  ast_visitor.hpp  chunk.hpp  compiler.hpp  compiler_common.hpp  expr.hpp  il.hpp  il_compiler.hpp  library.hpp  module.hpp  object.hpp  opcode.hpp  parser.hpp  scanner.hpp  sema.hpp  stmt.hpp  string.hpp  string_interner.hpp  token.hpp  type.hpp  value.hpp  vm.hpp
src/: roxy.cpp  roxy_lsp_server.cpp
src/roxy/: ast_printer.cpp  chunk.cpp  library.cpp  module.cpp  object.cpp  opcode.cpp  parser.cpp  scanner.cpp  sema.cpp  string.cpp  string_interner.cpp  type.cpp  value.cpp  vm.cpp
src/roxy-bin/: main.cpp
tests/: bytecode_test.cpp  e2e_test.cpp  interop_test.cpp  lexer_test.cpp  lowering_test.cpp  parser_test.cpp  semantic_test.cpp  ssa_ir_test.cpp  test_main.cpp  vm_test.cpp
tests/e2e/: algorithms_test.cpp  arrays_test.cpp  basics_test.cpp  casts_test.cpp  constructors_test.cpp  e2e_algorithms_test.cpp  e2e_arrays_test.cpp  e2e_basics_test.cpp  e2e_params_test.cpp  e2e_recursion_test.cpp  e2e_strings_test.cpp  e2e_structs_test.cpp  e2e_test_helpers.cpp  e2e_test_helpers.hpp  enums_test.cpp  generics_test.cpp  heap_test.cpp  inheritance_test.cpp  int_literal_test.cpp  interop_test.cpp  lists_test.cpp  maps_test.cpp  methods_test.cpp  modules_test.cpp  params_test.cpp  recursion_test.cpp  strings_test.cpp  structs_test.cpp  tagged_unions_test.cpp  test_algorithms.cpp  test_basics.cpp  test_c_backend.cpp  test_casts.cpp  test_cli.cpp  test_closures.cpp  test_constructors.cpp  test_coroutines.cpp  test_e2e_backend.hpp  test_enums.cpp  test_exceptions.cpp  (+30 more)
tests/fuzz/: README.md  fuzz_lexer.cpp  fuzz_lsp_parser.cpp  fuzz_one_lexer.cpp  fuzz_one_lsp_parser.cpp  fuzz_one_parser.cpp  fuzz_one_structured.cpp  fuzz_parser.cpp  fuzz_structured.cpp  fuzz_targets.hpp
tests/unit/: bytecode_test.cpp  format_test.cpp  lexer_test.cpp  lowering_test.cpp  parser_test.cpp  semantic_test.cpp  slab_allocator_test.cpp  ssa_ir_test.cpp  static_string_test.cpp  string_test.cpp  test_bytecode.cpp  test_container_pin.cpp  test_cst_lowering.cpp  test_format.cpp  test_fuzz_regression.cpp  test_global_index.cpp  test_indexer.cpp  test_ir_optimize.cpp  test_ir_validator.cpp  test_json.cpp  test_lexer.cpp  test_lifecycle_predicates.cpp  test_lowering.cpp  test_lsp_analysis_context.cpp  test_lsp_completion.cpp  test_lsp_hover.cpp  test_lsp_parser.cpp  test_lsp_references.cpp  test_lsp_semantic_diagnostics.cpp  test_lsp_type_resolver.cpp  test_parser.cpp  test_runtime_ctx.cpp  test_semantic.cpp  test_slab_allocator.cpp  test_ssa_ir.cpp  test_static_string.cpp  test_string.cpp  test_structured_gen.cpp  test_vm.cpp  vm_test.cpp
(+291 files in other folders)
